test/kubernetes/e2e/features/agentgateway/configmap/testdata/setup.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: agent-gateway-config
  namespace: default
data:
  config.yaml: |-
    config:
      backend:
        connectTimeout: 1s
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayParameters
metadata:
  name: kgateway
spec:
  kube:
    agentgateway:
      enabled: true
      logLevel: debug
      customConfigMapName: agent-gateway-config
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: agentgateway
spec:
  controllerName: kgateway.dev/agentgateway
  description: Specialized class for agentgateway.
  parametersRef:
    group: gateway.kgateway.dev
    kind: GatewayParameters
    name: kgateway
    namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agent-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: static-backend
  namespace: default
spec:
  type: Static
  static:
    hosts:
    - host: httpbin.org
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-route
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: agent-gateway
  rules:
  - name: static
    backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: static-backend
    matches:
    - path:
        type: PathPrefix
        value: /
